--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StoreIt</title>
     <link rel="stylesheet" href="./storeItStyle.css">
-    <link rel="shortcut icon" href="./Union.svg">
+    <link rel="shortcut icon" href="./storeitlogo.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +24,7 @@
 <body>
     <div id="todo">
         <div id="todo-input" class="container d-flex justify-content-center align-content-center mt-4 mb-3">
+            <img src="./storeitweb.svg" alt="">
             <form class="d-flex align-content-center">
                 <input type="text" placeholder="Item Name" id="ItemName">
                 <input type="date" placeholder="Expiry Date" id="ExpiredDate">
